Bug 529772 - [9] Cleanup and improve JavaRuntime.getModuleCLIOptions
Change-Id: I337c0fddf6b94bb371384f3c9b0598fcdd9567df